# WolfStiffness

./: .gitignore  LICENSE.txt  LayeredHalfSpace.py  ReadMe.md  bitbucket-pipelines.yml  env.yml  example.py  requirements.txt  setup.cfg  tox.ini  wolfStiffness.py
.github/workflows/: tests.yml
WolfStiffness/: LayeredHalfSpace.py  utils.py  wolfStiffness.py
example/: input.csv  k_dyn.csv  post_proc.py
unit_test/: run_tests.bat  test_wolf.py
unit_test/files/: Kdyn_horizontal.json  Kdyn_vertical.json  input_H.csv
unit_test/halfspace_H/: layers.csv  matlab.csv  test.py
unit_test/halfspace_H_nu/: layers.csv  matlab.csv
unit_test/halfspace_V/: layers.csv  matlab.csv
unit_test/halfspace_V_nu/: layers.csv  matlab.csv
unit_test/multilayer_H/: layers.csv  matlab.csv
unit_test/multilayer_H_deepLoad/: layers.csv  matlab.csv
unit_test/multilayer_V/: layers.csv  matlab.csv
unit_test/multilayer_V_deepLoad/: layers.csv  matlab.csv
