[metadata]
name = WolfStiffness
version = 1.0
author = Bruno Zuada Coelho
author_email = bruno.zuadacoelho@deltares.nl
description = Dynamic stiffness following cone model
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7