[metadata]
name = WolfStiffness
version = 1.0
author = Bruno Zuada Coelho
author_email = bruno.zuadacoelho@deltares.nl
description = Dynamic stiffness following cone model
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
packages = WolfStiffness
include_package_data = True
install_requires =
    matplotlib>=3.0.3
    numpy>=1.16.2
python_requires = >=3.8


[options.extras_require]
testing =
    pytest==7.4.2